--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mongodb": "^6.21.0",
     "mongoose": "^9.0.1",
     "next": "13.5.1",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
