--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.948.0",
     "@google/genai": "^1.32.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.0",
@@ -47,7 +48,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
